Practice/k8s/sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  sandbox-deployment
  labels:
    name:  sandbox-deployment
spec:
  replicas: 1
  selector:
    mathcLabels: 
        app: sandbox
  template:
    metadata:
      labels:
        app: sandbox
    spec:
      containers:
      - image:  sandbox:latest
        imagePullPolicy: IfNotPresent
        name:  sandbox-container
        resources:
          limits:
            cpu: "500m"
            memory: "400M"
          requests:
            cpu: "250m"
            memory: "200M"
        livenessProbe:
          httpGet:
            path: /_status/health
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/health
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10   
        ports:
        - containerPort:  3000
          name:  http
